name:                adventofcode2016
version:             0.0.0.0
synopsis:            Solutions for Advent of Code 2016
description:         Please see README.md
homepage:            https://github.com/kdungs/adventofcode2016#readme
license:             MIT
license-file:        LICENSE
author:              Kevin Dungs
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:      git
  location:  https://github.com/kdungs/adventofcode2016

executable 01
  main-is:           01.hs
  build-depends:     base,
                     mtl,
                     parsec
  default-language:  Haskell2010

executable 02
  main-is:           02.hs
  build-depends:     base,
                     parsec
  default-language:  Haskell2010

executable 03
  main-is:           03.hs
  build-depends:     base,
                     parsec
  default-language:  Haskell2010

executable 04
  main-is:           04.hs
  build-depends:     base,
                     containers,
                     parsec
  default-language:  Haskell2010

executable 05
  main-is:           05.hs
  build-depends:     base,
                     bytestring,
                     containers,
                     cryptonite,
                     parsec
  default-language:  Haskell2010

executable 06
  main-is:           06.hs
  build-depends:     base,
                     parsec
  default-language:  Haskell2010

executable 07
  main-is:           07.hs
  build-depends:     base,
                     parsec
  default-language:  Haskell2010

executable 08
  main-is:           08.hs
  build-depends:     base,
                     parsec
  default-language:  Haskell2010

executable 09
  main-is:           09.hs
  build-depends:     base,
                     parsec
  default-language:  Haskell2010

executable 12
  main-is:           12.hs
  build-depends:     base,
                     containers,
                     parsec,
                     parsec-numbers
  default-language:  Haskell2010
