name:                adventofcode2019
version:             0.1.0.0
homepage:            https://github.com/kdungs/adventofcode/2019
license:             MIT
author:              Kevin Dungs
maintainer:          kevin@dun.gs
copyright:           2019 Kevin Dungs
category:            Puzzle
build-type:          Simple
cabal-version:       >=1.10

executable 01
  main-is:             01.hs
  default-language:    Haskell2010
  build-depends:       base,
                       parsec

executable 02
  main-is:             02.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec
