name:                adventofcode2019
version:             0.1.0.0
homepage:            https://github.com/kdungs/adventofcode/2019
license:             MIT
author:              Kevin Dungs
maintainer:          kevin@dun.gs
copyright:           2019 Kevin Dungs
category:            Puzzle
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Intcode,
                       Utils
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base,
                       containers,
                       parsec,
                       parsec-numbers

executable 01
  main-is:             01.hs
  default-language:    Haskell2010
  build-depends:       base,
                       parsec

executable 02
  main-is:             02.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec

executable 03
  main-is:             03.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 04
  main-is:             04.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 05
  main-is:             05.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec,
                       parsec-numbers

executable 06
  main-is:             06.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 07
  main-is:             07.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec,
                       parsec-numbers

executable 08
  main-is:             08.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 09
  main-is:             09.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec
