name:                adventofcode2019
version:             0.1.0.0
homepage:            https://github.com/kdungs/adventofcode/2019
license:             MIT
author:              Kevin Dungs
maintainer:          kevin@dun.gs
copyright:           2019 Kevin Dungs
category:            Puzzle
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Intcode,
                       Intcode.Chain,
                       Utils
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base,
                       containers,
                       parsec,
                       parsec-numbers

test-suite test-aoc
  type:           exitcode-stdio-1.0
  main-is:        test-aoc.hs
  hs-source-dirs: test
  other-modules:  Tests.Intcode,
                  Tests.Intcode.Chain
  build-depends:  adventofcode2019,
                  base,
                  containers,
                  parsec,
                  tasty,
                  tasty-hunit,
                  tasty-quickcheck

executable 01
  main-is:             01.hs
  default-language:    Haskell2010
  build-depends:       base,
                       parsec

executable 02
  main-is:             02.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec

executable 03
  main-is:             03.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 04
  main-is:             04.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 05
  main-is:             05.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       parsec

executable 06
  main-is:             06.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 07
  main-is:             07.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec

executable 08
  main-is:             08.hs
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       parsec

executable 09
  main-is:             09.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       parsec

executable 10
  main-is:             10.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers

executable 11
  main-is:             11.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec

executable 12
  main-is:             12.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec,
                       parsec-numbers

executable 13
  main-is:             13.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec,
                       split

executable 14
  main-is:             14.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec,
                       parsec-numbers

executable 15
  main-is:             15.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec

executable 16
  main-is:             16.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec,
                       parsec-numbers

executable 17
  main-is:             17.hs
  default-language:    Haskell2010
  build-depends:       adventofcode2019,
                       base,
                       containers,
                       parsec
